Problem with particle age #38811

Closed
opened 2014-02-24 15:41:58 +01:00 by Andreas Heckmann · 11 comments

http://www.pasteall.org/blend/26872

System Information
win7 64bit ATi 7850
Blender Version
Broken: (example: 2.69)

Short description of error
Wrong Particle Age with two Objects conatining a particle System
Particle age on system 1 jump back to 1 when particle system 2 emits a particle
Particle age on system 2 copy age of the particle on system 1

Exact steps for others to reproduce the error
Based on a (as simple as possible) attached .blend file with minimum amount of steps

In the blend file you can see the problem on frame 15 (in render preview)

Text from stackexchange:
have a problem with my cycles Material Setup.

I have an ParticleSystem that use a object as dupli object. The Material of the Dupli Object depends on the age of the particle. Up to here it works fine.

If i add a second particle system (on another object) and use a dulpi object that also depends on particle age things become weired.

At the moment the first particle of the second particle system is emitted the particle copy the age of the first particle system and the the age of the first particle system gets back to 1.

In the attached file both particle system have only one particle and both

http://www.pasteall.org/blend/26872 **System Information** win7 64bit ATi 7850 **Blender Version** Broken: (example: 2.69) **Short description of error** Wrong Particle Age with two Objects conatining a particle System Particle age on system 1 jump back to 1 when particle system 2 emits a particle Particle age on system 2 copy age of the particle on system 1 **Exact steps for others to reproduce the error** Based on a (as simple as possible) attached .blend file with minimum amount of steps In the blend file you can see the problem on frame 15 (in render preview) Text from stackexchange: have a problem with my cycles Material Setup. I have an ParticleSystem that use a object as dupli object. The Material of the Dupli Object depends on the age of the particle. Up to here it works fine. If i add a second particle system (on another object) and use a dulpi object that also depends on particle age things become weired. At the moment the first particle of the second particle system is emitted the particle copy the age of the first particle system and the the age of the first particle system gets back to 1. In the attached file both particle system have only one particle and both

Changed status to: 'Open'

Changed status to: 'Open'

Added subscriber: @Andreas80

Added subscriber: @Andreas80
Member

Added subscriber: @gandalf3

Added subscriber: @gandalf3
Member

Added subscriber: @LukasTonne

Added subscriber: @LukasTonne
Member

Note: You can (and should) attach files directly to bug reports instead of using pasteall, just drag the file into the phabricator window.

Note: You can (and should) attach files directly to bug reports instead of using pasteall, just drag the file into the phabricator window.
Lukas Tönne self-assigned this 2014-02-25 11:16:39 +01:00

The blend file is too big to upload it here. It was easier to share it on pasteall than scale the texture down. Sry my fault!

The blend file is too big to upload it here. It was easier to share it on pasteall than scale the texture down. Sry my fault!

This issue was referenced by blender/blender-addons-contrib@0bef196894

This issue was referenced by blender/blender-addons-contrib@0bef196894abd19903b0741ec6250e0558b4f1a4

This issue was referenced by 0bef196894

This issue was referenced by 0bef196894abd19903b0741ec6250e0558b4f1a4
Member

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Member

Closed by commit 0bef196894.

Closed by commit 0bef196894.

Tested with blender-2.69-70924a7-win64 .

No Problems anymore. Thanks for the fix ;)

Tested with blender-2.69-70924a7-win64 . No Problems anymore. Thanks for the fix ;)
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#38811
No description provided.